# POSSystem

./: .gitignore  pyproject.toml
src/possystem/: main.py
src/possystem/api/routes/: auth.py  branches.py  clients.py  conversions.py  ingredients.py  permissions.py  product_batch.py  product_brand.py  product_categories.py  product_master.py  product_stock_initials.py  product_wallets.py  product_warehouses.py  products.py  purchase_details.py  purchases.py  refund_products.py  roles.py  sale_detail_attentions.py  sale_details.py  sale_payments.py  sales.py  suppliers.py  transports.py  units.py  users.py  warehouses.py
src/possystem/db/: session.py
src/possystem/models/: __init__.py
src/possystem/models/branches/: orm.py  schemas.py
src/possystem/models/clients/: orm.py  schemas.py
src/possystem/models/conversions/: orm.py  schemas.py
src/possystem/models/ingredients/: orm.py  schemas.py
src/possystem/models/permissions/: __init__.py  orm.py  schemas.py
src/possystem/models/product_batch/: orm.py  schemas.py
src/possystem/models/product_brand/: orm.py  schemas.py
src/possystem/models/product_categories/: orm.py  schemas.py
src/possystem/models/product_has_ingredients/: orm.py  schemas.py
src/possystem/models/product_master/: orm.py  schemas.py
src/possystem/models/product_stock_initials/: orm.py  schemas.py
src/possystem/models/product_wallets/: orm.py  (+1 more)
src/possystem/seeds/: init_db.py  seed_permissions.py  seed_roles.py  seed_superuser.py
src/possystem/types/: products.py  users.py
src/possystem/utils/: permissions.py  security.py
(+35 files in other folders)
