[project]
name = "possystem"
version = "0.1.0"
description = ""
authors = [
    {name = "Luciano",email = "ljuarezs2000@alumno.ipn.mx"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "possystem", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
