[project]
name = "possystem"
version = "0.1.0"
description = ""
authors = [
    {name = "Luciano",email = "ljuarezs2000@alumno.ipn.mx"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "possystem", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
